syntax="proto3";
package thingrpc;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "thingrpc/thing.proto";

option go_package = "github.com/snowzach/gogrpcapi/thingrpc";

service ThingRPC {

    rpc ThingFind(google.protobuf.Empty) returns (ThingFindResponse) {
        option (google.api.http) = {
            get: "/things"
        };
    }

    rpc ThingGet(ThingId) returns (thingrpc.Thing) {
        option (google.api.http) = {
            get: "/things/{id}"
        };
    }

    rpc ThingSave(thingrpc.Thing) returns (ThingId) {
        option (google.api.http) = {
            post: "/things"
            body: "*"
            additional_bindings: {
                post: "/things/{id}"
                body: "*"
            }
        };
    }

    rpc ThingDelete(ThingId) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/things/{id}"
        };
    }
}

message ThingId {
    string id = 1;
}

message ThingFindResponse {
    repeated thingrpc.Thing data = 1;
}